--- a/works/giantKilling/index.html
+++ b/works/giantKilling/index.html
@@ -34,22 +34,22 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>giantKilling</h1>
       <p>Small is better than large.</p>
       <p>Created date / January 22, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <main id="main" style="diaplay: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
         <input type="range" id="speed" min="0" max="30" value="1">
       </div>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./giantKilling.js"></script>
