--- a/works/kiraYaba/index.html
+++ b/works/kiraYaba/index.html
@@ -34,17 +34,17 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>kiraYaba</h1>
       <h2>Inspired by Star Twinkle PreCure. Thanks for one year.</h2>
       <p>Created date / January 27, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
         <ul id="colors">
@@ -55,7 +55,7 @@
           <li class="cosmo"></li>
         </ul>
       </div>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./kiraYaba.js"></script>
