--- a/works/mamaragan/index.html
+++ b/works/mamaragan/index.html
@@ -34,21 +34,21 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>mamaragan</h1>
       <h2>Inspired by God Enel from ONE PIECE.</h2>
       <p>Created date / February 16, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvasThunder">This browser cannot use a canvas.</canvas>
       <canvas id="canvasCloud">This browser cannot use a canvas.</canvas>
       <canvas id="canvasRain">This browser cannot use a canvas.</canvas>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./mamaragan.js"></script>
