--- a/works/orangeKun/index.html
+++ b/works/orangeKun/index.html
@@ -34,20 +34,20 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>orangeKun</h1>
       <h2>Please click the window. You can harvest many orange.</2>
       <p>Created date / February 29, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <p id="count">You got <span id="countNum">0</span>.</p>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./orangeKun.js"></script>
