--- a/works/chocolate/index.html
+++ b/works/chocolate/index.html
@@ -34,19 +34,19 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>chocolate</h1>
       <h2>Please keep moving the mouse or swipe.</h2>
       <p>Created date / February 6, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
-    </div>
+    </main>
     <div class="controller">
       <p>You ate <span id="count">0</span>.</p>
       <input type="range" id="split" min="1" max="25" step="4" value="8">
