--- a/works/neonWave/index.html
+++ b/works/neonWave/index.html
@@ -34,16 +34,16 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>neonWave</h1>
       <p>Created date / February 13, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <p id="openController"><a href="#">Open Controller</a></p>
       <div id="controller">
@@ -93,7 +93,7 @@
           </dd>
         </dl>
       </div>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./neonWave.js"></script>
