--- a/works/rainyDay/index.html
+++ b/works/rainyDay/index.html
@@ -34,21 +34,21 @@
     <link rel="stylesheet" href="./style.css">
   </head>
   <body>
-    <!-- Main -->
-    <div id="main">
+    <!-- Header -->
+    <header id="header">
       <h1>rainyDay</h1>
       <p>Created date / January 20, 2020</p>
       <p><a href="../../index.html">Back</a></p>
-    </div>
+    </header>
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
-    <!-- Contents -->
-    <div id="contents" style="visibility: hidden;">
+    <!-- Main -->
+    <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
           <input type="range" id="amount" min="0" max="2000" value="500">
       </div>
-    </div>
+    </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
     <script src="./rainyDay.js"></script>
