--- a/index.html
+++ b/index.html
@@ -37,16 +37,17 @@
     <!-- Loading -->
     <p id="loading">Now Loading...</p>
     <!-- Header -->
-    <header id="header" class="cf">
+    <header id="header">
       <h1><a href="/">Toshiya Marukubo</a></h1>
-      <nav>
-        <ul>
-          <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
-          <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
-          <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
-        </ul>
-      </nav>
     </header>
+    <!-- Nav -->
+    <nav>
+      <ul>
+        <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
+        <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
+        <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
+      </ul>
+    </nav>
     <!-- Main -->
     <main id="main" style="display: none;">
       <!-- Canvas -->
