--- a/index.html
+++ b/index.html
@@ -125,8 +125,6 @@
           <p>Thanks for reading.</p>
         </section>
       </section>
-      <!-- Vehicles -->
-      <span id="car" style="display: block;"><i class="vehicle fas fa-car-side fa-3x" data-fa-transform="down-1"></i></span>
     </main>
     <!-- Footer -->
     <footer id="footer" style="display: none;">
@@ -136,6 +134,7 @@
     <script src="./home/js/loading.js"></script>
     <script src="./home/js/snowyTown.js"></script>
     <script src="./home/js/comingSoon.js"></script>
+    <script src="./home/js/scrollFixed.js"></script>
     <script src="./home/js/all.min.js"></script>
   </body>
 </html>
