--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya Marukubo</a></h1>
+      <p>I'm a non-professional. I like to do meaningless things.</p>
     </header>
     <!-- Nav -->
     <nav>
@@ -133,8 +134,6 @@
     <!-- Script -->
     <script src="./home/js/loading.js"></script>
     <script src="./home/js/snowyTown.js"></script>
-    <script src="./home/js/comingSoon.js"></script>
-    <script src="./home/js/scrollFixed.js"></script>
     <script src="./home/js/all.min.js"></script>
   </body>
 </html>
