--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya Marukubo</a></h1>
-      <p>I'm a non-professional. I like to do meaningless things.</p>
+      <p>I'm a non-professional.<br class="sm"> I like to do meaningless things.</p>
     </header>
     <!-- Nav -->
     <nav>
@@ -90,8 +90,8 @@
       </section>
       <!-- About -->
       <section id="about" class="cf">
-        <section class="aboutLeft">
-          <h2>About</h2>
+        <h2>About</h2>
+        <div class="aboutLeft">
           <p><img src="./home/img/mypicture.jpg" alt="my picture"></p>
           <p>It's not that I'm angry especially.</p>
           <ul>
@@ -99,7 +99,7 @@
             <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-2x"></i></a></li>
             <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-2x"></i></a></li>
           </ul>
-        </section>
+        </div>
         <section class="aboutRight">
           <h3>Me</h3>
           <p>
