--- a/index.html
+++ b/index.html
@@ -131,6 +131,8 @@
     <footer id="footer" style="display: none;">
       <small>&copy 2020 Toshiya Marukubo.</small>
     </footer>
+    <!-- Vehicle -->
+    <span><i class="vehicle fas fa-truck-pickup fa-3x" data-fa-transform="down-1"></i></span>
     <!-- Script -->
     <script src="./home/js/loading.js"></script>
     <script src="./home/js/snowyTown.js"></script>
