--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
       <!-- Works -->
       <section id="works">
         <h2>Works</h2>
-        <ul>
+        <ul id="dispWorks">
           <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
           <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
           <li><a href="./works/particleParty/index.html"><img src="./home/img/og/og-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
@@ -87,6 +87,7 @@
           <li><a href="./works/starlight/index.html"><img src="./home/img/og/og-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
           <li><a href="./works/jewelrySnow/index.html"><img src="./home/img/og/og-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
         </ul>
+        <button id="moreBtn">See All</button>
       </section>
       <!-- About -->
       <section id="about" class="cf">
@@ -135,6 +136,7 @@
     <span><i class="vehicle fas fa-truck-pickup fa-3x" data-fa-transform="down-1"></i></span>
     <!-- Script -->
     <script src="./home/js/loading.js"></script>
+    <script src="./home/js/dispWorks.js"></script>
     <script src="./home/js/snowyTown.js"></script>
     <script src="./home/js/all.min.js"></script>
   </body>
