--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
     <!-- Script -->
     <script src="./home/js/loading.js"></script>
     <script src="./home/js/dispWorks.js"></script>
+    <script src="./home/js/worksHover.js"></script>
     <script src="./home/js/snowyTown.js"></script>
     <script src="./home/js/all.min.js"></script>
   </body>
