--- a/index.html
+++ b/index.html
@@ -118,6 +118,10 @@
           <h3>This Site</h3>
           <p>
             I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
+            Basically, just now published works is using only pure JavaScript.<br>
+            From now on, I am thinking to learn svg animation, canvas 3D. And I want to publish it.<br>
+          </p>
+          <p>
             All the works's code here is published on <a href="https://codepen.io/toshiya-marukubo">Codepen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
           </p>
           <h3>You</h3>
