--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
           <p>
             I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
             Basically, just now published works is using only pure JavaScript.<br>
-            From now on, I am thinking to learn svg animation, canvas 3D. And I want to publish it.<br>
+            From now on, I am thinking to learn and to publish svg animation, canvas 3D.<br>
           </p>
           <p>
             All the works's code here is published on <a href="https://codepen.io/toshiya-marukubo">Codepen</a>, <a href="https://github.com/toshiya-marukubo">Github</a>. Please go to see it.
