--- a/index.html
+++ b/index.html
@@ -58,34 +58,34 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
-          <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
-          <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
-          <li><a href="./works/particleParty/index.html"><img src="./home/img/og/og-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
-          <li><a href="./works/mamaragan/index.html"><img src="./home/img/og/og-mamaragan.png" alt="mamaragan"></a><p>mamaragan / Feb 16, 2020</p></li>
-          <li><a href="./works/neonWave/index.html"><img src="./home/img/og/og-neonWave.png" alt="neonWave"></a><p>neonWave / Feb 13, 2020</p></li>
-          <li><a href="./works/fullMoon/index.html"><img src="./home/img/og/og-fullMoon.png" alt="fullMoon"></a><p>fullMoon / Feb 11, 2020</p></li>
-          <li><a href="./works/chocolate/index.html"><img src="./home/img/og/og-chocolate.png" alt="chocolate"></a><p>chocolate / Feb 06, 2020</p></li>
-          <li><a href="./works/happyValentine/index.html"><img src="./home/img/og/og-happyValentine.png" alt="happyValentine"></a><p>happyValentine / Feb 05, 2020</p></li>
-          <li><a href="./works/aquarium/index.html"><img src="./home/img/og/og-aquarium.png" alt="aquarium"></a><p>aquarium / Feb 02, 2020</p></li>
-          <li><a href="./works/firefly/index.html"><img src="./home/img/og/og-firefly.png" alt="firefly"></a><p>firefly / Jan 31, 2020</p></li>
-          <li><a href="./works/torch/index.html"><img src="./home/img/og/og-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
-          <li><a href="./works/snowyLandscape/index.html"><img src="./home/img/og/og-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
-          <li><a href="./works/kiraYaba/index.html"><img src="./home/img/og/og-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
+          <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
+          <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
+          <li><a href="./works/particleParty/index.html"><img src="./home/img/og/og-min-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
+          <li><a href="./works/mamaragan/index.html"><img src="./home/img/og/og-min-mamaragan.png" alt="mamaragan"></a><p>mamaragan / Feb 16, 2020</p></li>
+          <li><a href="./works/neonWave/index.html"><img src="./home/img/og/og-min-neonWave.png" alt="neonWave"></a><p>neonWave / Feb 13, 2020</p></li>
+          <li><a href="./works/fullMoon/index.html"><img src="./home/img/og/og-min-fullMoon.png" alt="fullMoon"></a><p>fullMoon / Feb 11, 2020</p></li>
+          <li><a href="./works/chocolate/index.html"><img src="./home/img/og/og-min-chocolate.png" alt="chocolate"></a><p>chocolate / Feb 06, 2020</p></li>
+          <li><a href="./works/happyValentine/index.html"><img src="./home/img/og/og-min-happyValentine.png" alt="happyValentine"></a><p>happyValentine / Feb 05, 2020</p></li>
+          <li><a href="./works/aquarium/index.html"><img src="./home/img/og/og-min-aquarium.png" alt="aquarium"></a><p>aquarium / Feb 02, 2020</p></li>
+          <li><a href="./works/firefly/index.html"><img src="./home/img/og/og-min-firefly.png" alt="firefly"></a><p>firefly / Jan 31, 2020</p></li>
+          <li><a href="./works/torch/index.html"><img src="./home/img/og/og-min-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
+          <li><a href="./works/snowyLandscape/index.html"><img src="./home/img/og/og-min-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
+          <li><a href="./works/kiraYaba/index.html"><img src="./home/img/og/og-min-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
           <!---
           <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
           -->
-          <li><a href="./works/fireworks/index.html"><img src="./home/img/og/og-fireworks.png" alt="fireworks"></a><p>fireworks / Jan 23, 2020</p></li>
+          <li><a href="./works/fireworks/index.html"><img src="./home/img/og/og-min-fireworks.png" alt="fireworks"></a><p>fireworks / Jan 23, 2020</p></li>
           <!--
           <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
           -->
-          <li><a href="./works/65536/index.html"><img src="./home/img/og/og-65536.png" alt="65536"></a><p>65536 / Jan 21, 2020</p></li>
-          <li><a href="./works/rainyDay/index.html"><img src="./home/img/og/og-rainyDay.png" alt="rainyDay"></a><p>rainyDay / Jan 20, 2020</p></li>
-          <li><a href="./works/mellomelloMellow/index.html"><img src="./home/img/og/og-mellomelloMellow.png" alt="mellomelloMellow"></a><p>mellomelloMellow / Jan 15, 2020</p></li>
-          <li><a href="./works/grassGrow/index.html"><img src="./home/img/og/og-grassGrow.png" alt="grassGrow"></a><p>grassGrow / Jan 15, 2020</p></li>
-          <li><a href="./works/fireball/index.html"><img src="./home/img/og/og-fireball.png" alt="fireball"></a><p>fireball / Jan 11, 2020</p></li>
-          <li><a href="./works/milkyWay/index.html"><img src="./home/img/og/og-milkyWay.png" alt="milyWay"></a><p>milkyway / Jan 10, 2020</p></li>
-          <li><a href="./works/starlight/index.html"><img src="./home/img/og/og-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
-          <li><a href="./works/jewelrySnow/index.html"><img src="./home/img/og/og-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
+          <li><a href="./works/65536/index.html"><img src="./home/img/og/og-min-65536.png" alt="65536"></a><p>65536 / Jan 21, 2020</p></li>
+          <li><a href="./works/rainyDay/index.html"><img src="./home/img/og/og-min-rainyDay.png" alt="rainyDay"></a><p>rainyDay / Jan 20, 2020</p></li>
+          <li><a href="./works/mellomelloMellow/index.html"><img src="./home/img/og/og-min-mellomelloMellow.png" alt="mellomelloMellow"></a><p>mellomelloMellow / Jan 15, 2020</p></li>
+          <li><a href="./works/grassGrow/index.html"><img src="./home/img/og/og-min-grassGrow.png" alt="grassGrow"></a><p>grassGrow / Jan 15, 2020</p></li>
+          <li><a href="./works/fireball/index.html"><img src="./home/img/og/og-min-fireball.png" alt="fireball"></a><p>fireball / Jan 11, 2020</p></li>
+          <li><a href="./works/milkyWay/index.html"><img src="./home/img/og/og-min-milkyWay.png" alt="milyWay"></a><p>milkyway / Jan 10, 2020</p></li>
+          <li><a href="./works/starlight/index.html"><img src="./home/img/og/og-min-starlight.png" alt="starlight"></a><p>starlight / Jan 09, 2020</p></li>
+          <li><a href="./works/jewelrySnow/index.html"><img src="./home/img/og/og-min-jewelrySnow.png" alt="jewelrySnow"></a><p>jewelrySnow / Jan 08, 2020</p></li>
         </ul>
         <button id="moreBtn">See All</button>
       </section>
