--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   </head>
   <body>
     <!-- Loading -->
-    <p id="loading">Now Loading...</p>
+    <div id="loading" class="lds-heart"><div></div></div>
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya Marukubo</a></h1>
