--- a/index.html
+++ b/index.html
@@ -35,7 +35,11 @@
   </head>
   <body>
     <!-- Loading -->
-    <div id="loading" class="lds-heart"><div></div></div>
+    <div id="loading" class="lds-heart">
+      <div>
+        <p>Loading...</p>
+      </div>
+    </div>
     <!-- Header -->
     <header id="header">
       <h1><a href="/">Toshiya Marukubo</a></h1>
