--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
           <h3>This Site</h3>
           <p>
             I like canvas especially now, I thought I want to publish works while learning so I made this site.<br>
-            Basically, just now published works is using only pure JavaScript.<br>
+            Basically, just now published works is using only pure JavaScript. I am not using plugin, because of studying.<br>
             From now on, I am thinking to learn and to publish svg animation, canvas 3D.<br>
           </p>
           <p>
