--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <!-- Nav -->
     <nav>
       <ul>
+        <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-lg"></i></a></li>
         <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-lg"></i></a></li>
         <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-lg"></i></a></li>
         <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-lg"></i></a></li>
@@ -100,6 +101,7 @@
           <p><img src="./home/img/mypicture.jpg" alt="my picture"></p>
           <p>It's not that I'm angry especially.</p>
           <ul>
+            <li><a href="http://www.marukubo.net"><i class="fas fa-user-graduate fa-2x"></i></a></li>
             <li><a href="https://codepen.io/toshiya-marukubo"><i class="fab fa-codepen fa-2x"></i></a></li>
             <li><a href="https://github.com/toshiya-marukubo"><i class="fab fa-github fa-2x"></i></a></li>
             <li><a href="https://twitter.com/toshiyamarukubo"><i class="fab fa-twitter fa-2x"></i></a></li>
