--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
+          <li><a href="./works/sunFlower/index.html"><img src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
           <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
           <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
           <li><a href="./works/particleParty/index.html"><img src="./home/img/og/og-min-particleParty.png" alt="particleParty"></a><p>particleParty / Feb 20, 2020</p></li>
