--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
+          <li><a href="./works/stayHome/index.html"><img src="./home/img/og/og-min-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
           <li><a href="./works/sunFlower/index.html"><img src="./home/img/og/og-min-sunFlower.png" alt="sunFlower"></a><p>sunFlower / Apr 10, 2020</p></li>
           <li><a href="./works/bigBang/index.html"><img src="./home/img/og/og-min-bigBang.png" alt="bigBang"></a><p>bigBang / Mar 04, 2020</p></li>
           <li><a href="./works/orangeKun/index.html"><img src="./home/img/og/og-min-orangeKun.png" alt="orangeKun"></a><p>orangeKun / Feb 29, 2020</p></li>
@@ -77,9 +78,6 @@
           <li><a href="./works/torch/index.html"><img src="./home/img/og/og-min-torch.png" alt="torch"></a><p>torch / Jan 30, 2020</p></li>
           <li><a href="./works/snowyLandscape/index.html"><img src="./home/img/og/og-min-snowyLandscape.png" alt="snowyLandscape"></a><p>snowyLandscape / Jan 28, 2020</p></li>
           <li><a href="./works/kiraYaba/index.html"><img src="./home/img/og/og-min-kiraYaba.png" alt="kiraYaba"></a><p>kiraYaba / Jan 27, 2020</p></li>
-          <!---
-          <li><a href="./works/giantKilling/index.html"><span class="fa-li"><i class="fas fa-circle"></i></span>giantKilling</a></li>
-          -->
           <li><a href="./works/fireworks/index.html"><img src="./home/img/og/og-min-fireworks.png" alt="fireworks"></a><p>fireworks / Jan 23, 2020</p></li>
           <!--
           <li><a href="./works/ghost/index.html"><span class="fa-li"><i class="fas fa-ghost"></i></span>ghost</a></li>
