--- a/works/stayHome/index.html
+++ b/works/stayHome/index.html
@@ -46,7 +46,7 @@
     <main id="main" style="diaplay: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
       <div class="controller">
-        <p>Healthy <span id="countHealthy">63</span> / Sick <span id="countSick">1</span></p>
+        <p>Healthy <span id="countHealthy">63</span><br>Sick <span id="countSick">1</span></p>
         <button id="resetBtn">Reset</button>
         <button id="stayBtn">Stay Home</button>
       </div>
