--- a/works/fairy/index.html
+++ b/works/fairy/index.html
@@ -6,9 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> 
     <meta http-equiv="X-UA-Compatible" content="IE=edge"> 
     <!-- Open Graph Protocol -->
-    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | ghost.js">
+    <meta property="og:title" content="Toshiya Marukubo | GitHub.io | fairy.js">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/ghost/index.html">
+    <meta property="og:url" content="https://toshiya-marukubo.github.io/works/fairy/index.html">
     <meta property="og:description" content="I'm a non-professional, and... neither engineer nor designer.">
     <meta property="og:site_name" content="Toshiya Marukubo | GitHub.io">
     <meta property="og:image">
@@ -16,7 +16,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@toshiyamarukubo">
     <meta name="twitter:creator" content="@toshiyamarukubo">
-    <title>Toshiya Marukubo | GitHub.io | ghost.js</title>
+    <title>Toshiya Marukubo | GitHub.io | fairy.js</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -24,7 +24,8 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>ghost</h1>
+      <h1>fairy</h1>
+      <h2>Please moving the mouse or swipe.</h2>
       <p>Created date / January 25, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </header>
@@ -36,6 +37,6 @@
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./ghost.js"></script>
+    <script src="./fairy.js"></script>
   </body>
 </html>
