--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
-          <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-mini-fairy.png" alt="fairy"></a><p>link / Apr 16, 2020</p></li>
+          <li><a href="./works/cell/index.html"><img src="./home/img/og/og-mini-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
+          <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-mini-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
           <li><a href="./works/link/index.html"><img src="./home/img/og/og-mini-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
           <li><a href="./works/socialDistance/index.html"><img src="./home/img/og/og-mini-socialDistance.png" alt="socialDistance"></a><p>socialDistance / Apr 13, 2020</p></li>
           <li><a href="./works/stayHome/index.html"><img src="./home/img/og/og-mini-stayHome.png" alt="stayHome"></a><p>stayHome / Apr 12, 2020</p></li>
