--- a/index.html
+++ b/index.html
@@ -63,6 +63,7 @@
       <section id="works">
         <h2>Works</h2>
         <ul id="dispWorks">
+          <li><a href="./works/goToTheMoon/index.html"><img src="./home/img/og/og-mini-goToTheMoon.png" alt="goToTheMoon"></a><p>goToTheMoon / Apr 19, 2020</p></li>
           <li><a href="./works/cell/index.html"><img src="./home/img/og/og-mini-cell.png" alt="cell"></a><p>cell / Apr 17, 2020</p></li>
           <li><a href="./works/fairy/index.html"><img src="./home/img/og/og-mini-fairy.png" alt="fairy"></a><p>fairy / Apr 16, 2020</p></li>
           <li><a href="./works/link/index.html"><img src="./home/img/og/og-mini-link.png" alt="link"></a><p>link / Apr 14, 2020</p></li>
