--- a/works/goToTheMoon/index.html
+++ b/works/goToTheMoon/index.html
@@ -18,8 +18,8 @@
     <meta property="og:type" content="website">
     <meta property="og:site_name" content="Toshiya Marukubo | Homepage">
     <meta property="og:url" content="https://toshiya-marukubo.github.io/">
-    <meta property="og:title" content="Toshiya Marukubo | Homepage | spaceTravel">
-    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-spaceTravel.png">
+    <meta property="og:title" content="Toshiya Marukubo | Homepage | goToTheMoon">
+    <meta property="og:image" content="https://toshiya-marukubo.github.io/home/img/og/og-goToTheMoon.png">
     <meta property="og:description" content="I'm a non-professional. Neither web dev nor designer.">
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
@@ -28,7 +28,7 @@
     <!-- Icons -->
     <link rel="icon" href="https://toshiya-marukubo.github.io/home/img/favicon.svg" sizes="any" type="image/svg+xml">
     <!-- Title -->
-    <title>Toshiya Marukubo | Homepage | spaceTravel</title>
+    <title>Toshiya Marukubo | Homepage | goToTheMoon</title>
     <!-- CSS -->
     <link rel="stylesheet" href="../../home/css/reset.css">
     <link rel="stylesheet" href="./style.css">
@@ -36,8 +36,8 @@
   <body>
     <!-- Header -->
     <header id="header">
-      <h1>spaceTravel</h1>
-      <p>Created date / April 17, 2020</p>
+      <h1>goToTheMoon</h1>
+      <p>Created date / April 19, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </header>
     <!-- Loading -->
@@ -45,14 +45,9 @@
     <!-- Main -->
     <main id="main" style="display: none;">
       <canvas id="canvas">This browser cannot use a canvas.</canvas>
-      <div id="description">
-        <ul>
-          <li></li>
-        </ul>
-      </div>
     </main>
     <!-- Script -->
     <script src="../../home/js/loading.js"></script>
-    <script src="./spaceTravel.js"></script>
+    <script src="./goToTheMoon.js"></script>
   </body>
 </html>
