--- a/works/simulationVer1/index.html
+++ b/works/simulationVer1/index.html
@@ -37,7 +37,7 @@
     <!-- Header -->
     <header id="header">
       <h1>simulationVer1</h1>
-      <h2>Click to back to home and click again to break up.</h2>
+      <h2>Please click the window.</h2>
       <p>Created date / April 22, 2020</p>
       <p><a href="../../index.html">Back</a></p>
     </header>
